--- a/src/css/layouts.scss
+++ b/src/css/layouts.scss
@@ -1,24 +1,25 @@
 
 .tilted-row {
-  // Note: because @media doesn't support native CSS variables, we're using Sass for those. Sass however, doesn't scope it's variables to @media (because it's a JS variable and @media isn't a selector, but a condition), it just overwrites their values. So we're using native CSS for the rest of the variables.
-  $spread: 700px; // above breakpoint
-  $stack: 699px; // below breakpoint
+  display: flex;
+  flex-direction: column;
+  // Note: because @media doesn't support native CSS variables, we're using Sass for some of these. Sass however, doesn't scope it's variables to @media (because it's a JS variable and @media isn't a selector, but a condition determined when the page is rendered), it just overwrites their values. So we're using native CSS for the rest of the variables.
+  $br-unstack: 700px; // above breakpoint
+  $br-stack: 699px; // below breakpoint
   --cushion: 15vw; // top/bottom padding (to compensate for angle)
   --gap: 8vw;
-  --gap-half: 4vw; // should be half of --gap
   // angle. don't go crazy!
   --lefty: -14.1deg; // same as --righty, but negative
   --righty: 14.1deg; // same as --lefty, but positive
   --width-limit: 600px;
-  --bleed-adjust-x2: 1.194;
-  --bleed-adjust-x3: 1.32;
-  --bleed-adjust-y: 0.95;
+  --bleed-adjust-y: 1.002;
   --bleed-left: -4vw;
   --bleed-right: 4vw;
-  @media(min-width: $spread) {
+  @media(min-width: $br-unstack) {
     --gap: 56px;
-    --gap-half: 28px;
     --cushion: 100px;
+    --bleed-adjust-x2: 1.197;
+    --bleed-adjust-x3: 1.34;
+    --bleed-adjust-y: 0.95;
     &:has(> :nth-child(2)) {
       --cushion: 7.5vw;
     }
@@ -26,19 +27,11 @@
       --cushion: 6vw;
     }
   }
-  display: flex;
-  flex-direction: column;
   // options
   .z-0 { z-index: 0; }
   .z-1 { z-index: 1; }
   .z-2 { z-index: 2; }
   .z-3 { z-index: 3; }
-  .follow-tilt { rotate: var(--righty); }
-  .unfollow-tilt { rotate: var(--lefty); }
-  @media (max-width: $stack) {
-    > .collapse-stack-top { padding-top: 0; }
-    > .collapse-stack-bottom { padding-bottom: 0; }
-  }
   // columns
   > * {
     box-sizing: border-box;
@@ -46,12 +39,14 @@
     padding: var(--cushion) var(--gap);
     position: relative;
     width: 100%;
-    @media (max-width: $stack) {
+    @media (max-width: $br-stack) {
       // Make the style attribute responsive (sort of)
       padding-left: var(--gap) !important;
       padding-right: var(--gap) !important;
     }
     // inner content
+    > .follow-tilt { rotate: var(--righty); }
+    > .unfollow-tilt { rotate: var(--lefty); }
     > * {
       margin-left: auto;
       margin-right: auto;
@@ -63,7 +58,13 @@
     // column backgrounds
     &::before {
       content: "";
-      transform: skewY(var(--righty));
+    }
+    // column backgrounds
+    &::before,
+    .column-background {
+      transform: 
+        skewY(var(--righty)) 
+        scaleY(var(--bleed-adjust-y));
 
       position: absolute;
       top: 0;
@@ -71,13 +72,21 @@
       right: 0;
       bottom: 0;
       z-index: -1;
+      & > .follow-tilt { rotate: var(--righty); }
+      & > .unfollow-tilt { transform: scaleY(var(--lefty)); }
     }
     .column-width {
-      max-width: calc(100% + (56px* 2));
+      margin-left: calc(0px - var(--gap));
+      max-width: calc(100% + (var(--gap)* 2));
+      // transform: translateX(calc(0 - var(--gap)));
+    }
+    @media (max-width: $br-stack) {
+      &.collapse-stack-top { padding-top: 0; }
+      &.collapse-stack-bottom { padding-bottom: 0; }
     }
   }
   // # above breakpoint
-  @media(min-width: $spread) {
+  @media(min-width: $br-unstack) {
     flex-direction: row;
     justify-content: space-between;
     transform: skewY(var(--righty));
@@ -91,41 +100,60 @@
     &:has(> :nth-child(2)) {
       // columns
       > * {
-        padding: var(--cushion) var(--gap-half);
-        &::before {
-          transform: skew(var(--lefty), var(--righty)) scaleY(var(--bleed-adjust-y));
+        padding: var(--cushion) calc(var(--gap) / 2);
+        &::before,
+        .column-background {
+          transform: 
+            skew(var(--lefty), var(--righty)) 
+            scaleY(var(--bleed-adjust-y));
         }
         &:first-child { 
           flex-grow: 1;
           max-width: unset;
           padding-left: var(--gap);
-          &::before {
-            transform: skew(var(--lefty), var(--righty)) scale(var(--bleed-adjust-x2), var(--bleed-adjust-y)) translate(var(--bleed-left), 0);
+          &::before,
+          .column-background {
+            transform: 
+              skew(var(--lefty), var(--righty)) 
+              scale(var(--bleed-adjust-x2), var(--bleed-adjust-y)) 
+              translate(var(--bleed-left), 0);
           }
         }
         &:last-child { 
           flex-grow: 1;
           max-width: unset;
           padding-right: var(--gap);
-          &::before {
-            transform: skew(var(--lefty), var(--righty)) scale(var(--bleed-adjust-x2), var(--bleed-adjust-y)) translate(var(--bleed-right), 0);
+          &::before,
+          .column-background {
+            transform: 
+              skew(var(--lefty), var(--righty)) 
+              scale(var(--bleed-adjust-x2), var(--bleed-adjust-y)) 
+              translate(var(--bleed-right), 0);
           }
         }
       }
     }
     &:has(> :nth-child(3)) {
       // columns
-      > * { padding: var(--cushion) var(--gap-half); }
+      > * { padding: var(--cushion) calc(var(--gap) / 2); }
       > *:first-child {
         padding-left: var(--gap);
-        &::before {
-          transform: skew(var(--lefty), var(--righty)) scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) translate(var(--bleed-left), 0);
+        &::before,
+        .column-background {
+          transform: 
+            skew(var(--lefty), var(--righty)) 
+            scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) 
+            translate(var(--bleed-left), 0);
         }
       }
       > *:last-child {
         padding-right: var(--gap);
-        &::before {
-          transform: skew(var(--lefty), var(--righty)) scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) translate(var(--bleed-right), 0);
+        &::before,
+        .column-background {
+          transform: 
+            skew(var(--lefty), var(--righty)) 
+            scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) 
+            translate(var(--bleed-right), 0);
         }
       }
     }
@@ -133,33 +161,49 @@
       flex-direction: row-reverse;
       &:has(> :nth-child(2)) {
         > :first-child {
-          padding-left: var(--gap-half);
+          padding-left: calc(var(--gap) / 2);
           padding-right: var(--gap);
-          &::before {
-            transform: skew(var(--lefty), var(--righty)) scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) translate(var(--bleed-right), 0);
+          &::before,
+          .column-background {
+            transform: 
+              skew(var(--lefty), var(--righty)) 
+              scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) 
+              translate(var(--bleed-right), 0);
           }
         }
         > :last-child {
           padding-left: var(--gap);
-          padding-right: var(--gap-half);
-          &::before {
-            transform: skew(var(--lefty), var(--righty)) scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) translate(var(--bleed-left), 0);
+          padding-right: calc(var(--gap) / 2);
+          &::before,
+          .column-background {
+            transform: 
+              skew(var(--lefty), var(--righty)) 
+              scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) 
+              translate(var(--bleed-left), 0);
           }
         }
       }
       &:has(> :nth-child(3)) {
         > *:first-child {
-          padding-left: var(--gap-half);
+          padding-left: calc(var(--gap) / 2);
           padding-right: var(--gap);
-          &::before {
-            transform: skew(var(--lefty), var(--righty)) scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) translate(var(--bleed-right), 0);
+          &::before,
+          .column-background {
+            transform: 
+              skew(var(--lefty), var(--righty)) 
+              scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) 
+              translate(var(--bleed-right), 0);
           }
         }
         > *:last-child {
           padding-left: var(--gap);
-          padding-right: var(--gap-half);
-          &::before {
-            transform: skew(var(--lefty), var(--righty)) scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) translate(var(--bleed-left), 0);
+          padding-right: calc(var(--gap) / 2);
+          &::before,
+          .column-background {
+            transform: 
+              skew(var(--lefty), var(--righty)) 
+              scale(var(--bleed-adjust-x3), var(--bleed-adjust-y)) 
+              translate(var(--bleed-left), 0);
           }
         }
       }
