Adjustments on Solutions page.

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -428,6 +428,7 @@ h3.tilt:has(+ p) {
   align-self: flex-end;
   font-size: 2em;
   margin-left: auto;
+  margin-right: 0;
   padding-bottom: 1em;
   translate: 0 80px;
   /* margin-right: -36px; */
