Figuring out how to theme Prism.js

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -128,7 +128,7 @@ section.alignable p a[href*="http"]::after {
   text-decoration: none;
   vertical-align: middle;
 }
-code {
+p code {
   background-color: var(--color2);
   font-size: 0.9em;
   padding: 0.25em;
