Just catching this branch up. Not sure if I need it anymore, honestly. (#5)
* Optimized Home page hero.

* New content and stylesheet for Developer page.

* Changed jumplink on Home page to arrow.

* Minor fixes on jumplink.

* Minor fix on self portrait image.

* Changed /services to /solutions.

* Resolved: 'warning  A form label must be associated with a control' (Added aria-label to color scheme picker options.

* Added SCSS and portrait to Solutions page. TODO: change portrait to cat drawing.

* Converted buttons.css to buttons.scss.

* SCSS and wizardry.

* Rearranged /solutions pages structure. Added descriptive text to services.

* Added Web Maintenance and Web Presence descritptions and pages.

* Styled features under Services a bit. Also made the h3 support the tilt class.

* Removed nav indicator. Adjusted surrounding spacing accordingly.

* Added a URL field to the contact form.

* Applied SCSS and new adjustments to Home page hero.

* Added overflow: hidden; to body on Home page. Working with limitations.

* Home hero changes for Safari.

* Started Web Maintenance page.

* Ensuring portrait is up-to-date.

* Removed Stripe stuff from Web Maintenance page.

* Adjusted headings.

* Cutting down content.

* Added Start Over button to Wizard component.

* Replaced QWebties with QProblems (new Wizard).

* Optimized Wizard component. Not nearly as relient on DOM structure. Better clarity with goto and id props. Styled to make it a bit more compact. Tested with QProblems.js fragment.

* Added QWebsite to QProblems.

* saving progress on questionsairre.

* Questionairre progress.

* Questionairre progress.

* Questionairre progress.

* Questionairre progress.

* Re-removed services pages. Added BEM icon to Skills section. =D ...In the wrong branch. Doh!  Xo

* Changed name QProblems.js to QHelp.js.

* Changed name QProblems_HowFind.js to QHelp_HowToFind.js.

* Changed Q... names again. Took o

--- a/src/css/colors-default.css
+++ b/src/css/colors-default.css
@@ -4,6 +4,7 @@
 :root {
   --accent: #5a3a67;
   --color1: #ffffff;
+  --color1a: #fff6d8;
   --color2: #ffd8b7;
   --color3: #ff653a;
   --color4: #ea303c;
@@ -13,7 +14,7 @@
   --glowHalf1: #ffd8b7;
   --glowHalf2: #48293f;
   --headingHalf1: #4a3459;
-  --headingHalf2: #ffb58d;
+  --headingHalf2: #ffb18b;
   --knockout: #ffffff;
   --multiscreen: multiply;
   --text: #121f26;
@@ -23,7 +24,9 @@
   --tint1: #ffffff66;
   --tint2: #ffcc9366;
   --tint3: #ff653a66;
-  --tint4: #fe574a66;
+  --tint4: #ea303c66;
+  --tint5: #5a3a6766;
+  --tint6: #121f2666;
   /* Consistent colors */
   --dark: #121f26;
   --darkish: #29232e;
@@ -54,6 +57,7 @@
 :root:has(#color-scheme input[name="color-scheme"][value="dark"]:checked) {
   --accent: #ffd8b7;
   --color1: #121f26;
+  --color1a: #302a3f;
   --color2: #5a3a67;
   --color3: #ea3052;
   --color4: #fd835e;
@@ -63,7 +67,7 @@
   --glowHalf1: #5a3a67;
   --glowHalf2: #fea385;
   --headingHalf1: #fc9f7d;
-  --headingHalf2: #522a41;
+  --headingHalf2: #49293f;
   --knockout: #000000;
   --multiscreen: screen;
   --text: #ffffff;
@@ -88,10 +92,12 @@
   --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
   --scrolltrack: #121f26;
   --lightish: #ffd8b7;
-  --tint1: #121f2666; /* alpha was: .4 */
-  --tint2: #5a3a6766; /* alpha was: .4 */
+  --tint1: #121f2666;
+  --tint2: #5a3a6766;
   --tint3: #ea305266;
-  --tint4: #ff653a66; /* alpha was: .4 */
+  --tint4: #fd835e66;
+  --tint5: #ffd8b766;
+  --tint6: #ffffff66;
 }
 
 /* Dark Mode Preferred */
@@ -99,6 +105,7 @@
   :root {
     --accent: #ffd8b7;
     --color1: #121f26;
+    --color1a: #302a3f;
     --color2: #5a3a67;
     --color3: #ea3052;
     --color4: #fd835e;
@@ -108,7 +115,7 @@
     --glowHalf1: #5a3a67;
     --glowHalf2: #fea385;
     --headingHalf1: #fc9f7d;
-    --headingHalf2: #522a41;
+    --headingHalf2: #49293f;
     --knockout: #000000;
     --multiscreen: screen;
     --text: #ffffff;
@@ -133,16 +140,19 @@
     --gradInvert: linear-gradient(70deg, #4c3459, #121f27);
     --scrolltrack: #121f26;
     --lightish: #ffd8b7;
-    --tint1: #121f2666; /* alpha was: .4 */
-    --tint2: #5a3a6766; /* alpha was: .4 */
+    --tint1: #121f2666;
+    --tint2: #5a3a6766;
     --tint3: #ea305266;
-    --tint4: #ff653a66; /* alpha was: .4 */
+    --tint4: #fd835e66;
+    --tint5: #ffd8b766;
+    --tint6: #ffffff66;
   }
 
   /* Light Mode Selected */
   :root:has(#color-scheme input[name="color-scheme"][value="light"]:checked) {
     --accent: #5a3a67;
     --color1: #ffffff;
+    --color1a: #fff6d8;
     --color2: #ffd8b7;
     --color3: #ff653a;
     --color4: #ea303c;
@@ -152,7 +162,7 @@
     --glowHalf1: #ffd8b7;
     --glowHalf2: #48293f;
     --headingHalf1: #4a3459;
-    --headingHalf2: #ffb58d;
+    --headingHalf2: #ffb18b;
     --knockout: #ffffff;
     --multiscreen: multiply;
     --text: #121f26;
@@ -162,7 +172,9 @@
     --tint1: #ffffff66;
     --tint2: #ffcc9366;
     --tint3: #ff653a66;
-    --tint4: #fe574a66;
+    --tint4: #ea303c66;
+    --tint5: #5a3a6766;
+    --tint6: #121f2666;
     /* Consistent colors */
     --dark: #121f26;
     --darkish: #29232e;
