--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -37,7 +37,8 @@ a.post-link {
 }
 @media screen and (min-width: 800px) {
   .blog h1 {
-    margin-right: calc(50% - 320px);
+    font-size: calc(6vh + 4vw);
+    margin-right: 12vw;
   }
 }
 /* .blog .hero {
@@ -51,6 +52,7 @@ a.post-link {
 .blog article {
   box-sizing: border-box;
   transform: skew(14.125deg);
+  padding-bottom: var(--unit4);
   position: relative;
 }
 .blog article:last-of-type {
