--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -3,16 +3,20 @@ footer {
   position: relative;
   transform-origin: bottom left;
   width: 100vw;
+  // position: relative;
+  // z-index: 1;
   .footer__inner {
     padding: 60px 20px 0;
     color: var(--color5);
-    transition: all ease 1s;
+    transition: color ease 1s;
+    position: relative;
+    z-index: 1;
     &::before {
       background-image: var(--gradFooter);
       content: "";
       display: block;
       opacity: 0.66;
-      transition: all ease 1s;
+      transition: opacity ease 1s;
       transform: skewY(14.125deg);
       transform-origin: top left;
 
